Correcting project name in CMakeLists.txt, adding Zephyrproject 'zephyr' repo to manifest file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 cmake_minimum_required(VERSION 3.8.2)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(aws_iot)
+project(aws-iot-stand-alone)
 
 # NORDIC SDK APP START
 target_sources(app PRIVATE src/main.c)
